patch critical vuln